--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,9 @@ body {
     background-color: rgb(17, 16, 16);
     color: blanchedalmond;
     font-family: 'Jura', serif;
+    background-image: url("images/tbd");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /*---------------Header*/
@@ -15,21 +18,31 @@ body {
 #nav li {
     background-color: dimgray;
     text-align: center;
+    padding: none;
 }
 
-#nav li span {
+.nav-link {
     color: floralwhite;
 }
 
-#nav li span:hover {
-    text-decoration: none;
+.you-are-here {
+    background-color: firebrick;
+    color: floralwhite;
+    font-weight: bold; 
 }
 
-header h1 {
-    font-family: 'Jura', sans-serif;
+#header-logo {
+    font-family: 'Monoton', cursive;
     text-align: center;
+    color: firebrick;
+    margin-bottom: 0px;
+    padding: 2%;
+    font-size: 10vh;
 }
 
+header {
+    margin-bottom: 3%;
+}
 
 
 /*---------------Body*/
@@ -44,3 +57,30 @@ header h1 {
     max-height: 100%;
 }
 
+
+
+form input {
+    display: block;
+}
+
+.signup-form {
+    position: relative;
+    float: left;
+}
+
+/*---------------Media page*/
+
+#twitch-video-media {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#facebook-video-media, #facebook-video-media2 {
+    max-width: 100%;
+    max-height: 40%;
+}
+
+#youtube-video-media {
+    max-width: 100%;
+    max-height: 100%;
+}
