--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,14 +11,14 @@ body {
 
 /*---------------Header*/
 
-#nav {
+ul li {
     padding: 0px;
 }
 
 #nav li {
     background-color: dimgray;
     text-align: center;
-    padding: none;
+    padding: 0px;
 }
 
 .nav-link {
@@ -83,4 +83,12 @@ form input {
 #youtube-video-media {
     max-width: 100%;
     max-height: 100%;
+}
+
+
+/*---------------The Game page*/
+
+#thegame {
+    margin: 0px;
+    padding: 0px;
 }
