--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,14 @@ form input {
     background-size: cover;
 }
 
-.card img {
-    width: 100%
+.card-img-top {
+    height: 200px;
+    width: 100%;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.card {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: floralwhite;
 }
