--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,3 +113,16 @@ form input {
     background-color: rgba(0, 0, 0, 0.5);
     color: floralwhite;
 }
+
+#header-logo-feydakin {
+    font-family: 'Audiowide', sans-serif;
+    text-align: center;
+    color: firebrick;
+    margin-bottom: 0px;
+    padding: 2%;
+    font-size: 10vh;
+}
+
+#feydakin-main {
+    font-family: 'Audiowide', 'Franklin Gothic Medium', Arial, sans-serif;
+}
