--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ p {
     text-align: justify;
 }
 
-h2, h3 {
+h2, h3, h4 {
     text-align: center;
 }
 
@@ -21,7 +21,7 @@ h2, h3 {
     color: firebrick;
 }
 
-#sketchfab-media, #facebook-media, #youtube-media, #twitch-media {
+#sketchfab-media, #facebook-media, #youtube-media, #twitch-media, .embed-video {
     max-width: 100%;
     max-height: 100%;
     display: block;
@@ -134,6 +134,10 @@ h2, h3 {
     text-align: center;
 }
 
+.media-container .col-md-6 {
+    margin-bottom: 10px;
+}
+
 
 /*---------------The Game page*/
 
@@ -141,6 +145,13 @@ h2, h3 {
 #thegame h2 {
     text-decoration: underline solid;
 }
+
+/*---------------tournaments page*/
+
+.MM20-winners span {
+    text-decoration: underline solid;
+}
+
 
 /*---------------Feydakin*/
 
