--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ p {
 
 h2, h3, h4 {
     text-align: center;
+    color: firebrick;
 }
 
 .hyperlink {
@@ -150,6 +151,10 @@ h2, h3 {
 
 .MM20-winners span {
     text-decoration: underline solid;
+}
+
+.mm {
+    margin-bottom: 20px;
 }
 
 
