--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,10 +34,6 @@ h2, h3, h4 {
     margin: 0px;
 }
 
-.double-tour {
-    margin-top: 20px;
-}
-
 
 /*---------------Header*/
 
@@ -59,6 +55,11 @@ ul li {
     background-color: dimgray;
     text-align: center;
     padding: 0px;
+}
+
+#nav a {
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .nav-link {
@@ -106,7 +107,6 @@ header {
     width: 200px;
 }
 
-
 #facebook-video {
     max-width: 100%;
     max-height: 100%;
@@ -145,9 +145,8 @@ h2, h3 {
 }
 
 .media-container .col-md-6 {
-    margin-bottom: 10px;
+    margin-top: 20px;
 }
-
 
 /*---------------The Game page*/
 
@@ -161,9 +160,8 @@ h2, h3 {
 .MM20-winners span {
     text-decoration: underline solid;
 }
-
-#masters {
-    margin-bottom: 20px;
+.double-tour {
+    margin-top: 20px;
 }
 
 /*---------------Feydakin*/
