--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,9 +37,10 @@ h2, h3, h4 {
 
 /*---------------Header*/
 
-.dropdown-item {
+#nav .dropdown-item {
     background-color: dimgray;
     color: floralwhite;
+    padding-left: 10px;
 }
 
 .dropdown-menu {
@@ -96,6 +97,8 @@ header {
 .nav-item-dropdown a:hover {
     color: black;
 }
+
+
 
 /*---------------Index page*/
 
