nav-item different height fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,10 @@ header {
     color: black;
 }
 
+.nav-item, .nav-item-dropdown {
+    height: 43px;
+}
+
 /*---------------Index page*/
 
 .index-container .col-md-6 {
