fey background-img -> fixed-pos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,8 +170,11 @@ h2, h3 {
 
 #feydakin-main {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)), url("images/jeremy-bishop1unsplash.jpg");
+    height: 100%;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 #header-logo-feydakin {
